--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.2.2",
     "ejs": "*",
-    "mongodb": "*"
+    "mongodb": "*",
+    "express-partials": "*"
   }
 }
